--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,12 +9,12 @@
 body {
   background-color: #f7fbfd;
   width: 100%;
-  margin: -2rem 0 0 0;
+  /* margin: -2rem 0 0 0; */
   line-height: 1.80857;
   font-weight: normal;
   font-size: 14px;
   color: #070707;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 a {
