--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,40 +1,62 @@
 .footerContainer {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    height: auto;
-    background-color: #e7eafd;
+  display: grid;
+  width: 100%;
+  background-color: #e7eafd;
+  margin: -0.5rem;
 }
 .footerLeft {
-    float: left;
-}
-.footerLeft p {
-    padding: 40px;
-    margin-left: 100px;
+  display: grid;
+  place-content: center;
+  width: 100%;
 }
 .footerLeft a {
-    color: #f75023;
+  color: #f75023;
 }
 .footerLeft p span:hover {
-    color: #111111;
-    cursor: pointer;
+  color: #111111;
+  cursor: pointer;
 }
 .footerRight {
-    float: right;
+  display: grid;
+  justify-content: center;
+  width: 100%;
 }
 .footerRight ul {
-    position: absolute;
-    right: 0;
-    margin-right: 100px;
+  width: 20rem;
+  display: flex;
+  justify-content: space-around;
+  padding: 0;
+  margin: -1.5rem 0 0 0;
 }
 .footerRight li {
-    display: inline-block;
-    padding: 30px;
-    font-style: normal;
-    font-size: 17px;
+  display: inline-block;
+  font-size: 1.063rem;
 }
 
 .footerRight p:hover {
-    color: #f75023;
-    cursor: pointer;
+  color: #f75023;
+  cursor: pointer;
+}
+
+@media (min-width: 768px) {
+  .footerLeft {
+    width: 50%;
+    padding: 2rem 0;
+  }
+  .footerLeft p {
+    font-size: 1rem;
+  }
+  .footerRight {
+    width: 50%;
+    padding: 0;
+  }
+  .footerRight ul {
+    display: flex;
+    padding: 2rem 0;
+    margin: 0;
+    width: 18rem;
+  }
+  .footerRight p {
+    font-size: 1rem;
+  }
 }
