--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -1,12 +1,8 @@
 .main {
-    width: 100%;
-    padding: 0;
+  width: 100%;
 }
-.container {
-    width: 90%;
-    margin: 0 auto;
-}
-.scrolled {
+
+/* .scrolled {
     background-color: #ffffff;
     box-shadow: 1px 1px 5px rgba(8, 3, 3, 0.11);
-}
+} */
