--- a/src/styles/AboutMe.module.css
+++ b/src/styles/AboutMe.module.css
@@ -1,12 +1,17 @@
 .aboutMe {
-  display: inline-block;
   width: 100%;
+  height: auto;
+  display: grid;
+  padding: 5rem;
 }
 .aboutMeSpan {
-  width: 50%;
+  width: 100%;
   float: left;
   padding: 0 2rem;
   position: relative;
+  margin-left: -0.5rem;
+  justify-content: center;
+  text-align: center;
 }
 .aboutMeRight {
   padding: 4rem 2rem;
@@ -17,39 +22,45 @@
 .aboutMeRight p {
   margin-bottom: 3rem;
 }
+.aboutMeLeft {
+  display: flex;
+  justify-content: center;
+  height: auto;
+  width: 100%;
+  overflow: visible;
+}
 .aboutMeLeft .img01 {
   position: relative;
-  height: 30rem;
-  width: 30rem;
-  margin-top: 40px;
-  margin-left: 30px;
+  height: 26rem;
+  width: 25rem;
 }
 .aboutMeLeft .img02 {
   height: 200px;
   width: 120px;
   position: absolute;
   top: -70px;
-  left: 0;
+  left: -80px;
+  display: none;
 }
 .aboutMeRight .img03 {
   height: 200px;
   width: 300px;
   position: absolute;
-  right: -50px;
+  right: -100px;
   bottom: -90px;
+  display: none;
 }
 .miniBox {
   text-align: left;
   padding: 1rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   background-color: #ffffff;
   position: absolute;
-  transition: .5s ease;
-  
+  transition: 0.5s ease;
 }
 .miniBox:hover {
-    box-shadow: -.5rem -.5rem .5rem rgb(49, 48, 48);
-    margin: .5rem .5rem;
+  box-shadow: -0.5rem -0.5rem 0.5rem rgb(49, 48, 48);
+  margin: 0.5rem 0.5rem;
 }
 .miniBox h2 {
   position: absolute;
@@ -63,9 +74,53 @@
 }
 .success {
   left: 0;
-  top: 150px;
+  top: 3rem;
 }
 .projects {
-  top: 360px;
-  left: 25rem;
+  bottom: 3rem;
+  right: 0;
+}
+
+@media (min-width: 1024px) {
+  .aboutMe {
+    display: inline-block;
+    width: 100%;
+  }
+  .aboutMeSpan {
+    width: 50%;
+    float: left;
+    padding: 0 2rem;
+    position: relative;
+    text-align: left;
+  }
+  .aboutMeRight {
+    padding: 1rem 0 0 4rem;
+  }
+  .aboutMeLeft .img01 {
+    position: relative;
+    height: 30rem;
+    width: 30rem;
+    margin-top: 40px;
+    margin-left: 30px;
+  }
+  .aboutMeLeft .img02 {
+    display: block;
+  }
+  .aboutMeRight .img03 {
+    display: block;
+  }
+  .success {
+    left: 0;
+    top: 150px;
+  }
+  .projects {
+    bottom: 5rem;
+    right: 0;
+  }
+}
+
+@media (min-width: 1280px) {
+  .aboutMeRight {
+    padding: 2rem 0 0 4rem;
+  }
 }
