--- a/src/styles/TopContainer.module.css
+++ b/src/styles/TopContainer.module.css
@@ -1,117 +1,142 @@
 .container {
-    width: 100%;
-    height: auto;
-    /* margin-left: -1rem; */
+  width: 100%;
+  height: auto;
+  /* margin-left: -1rem; */
 }
 .bannerLeft {
-    width: 100%;
-    float: left;
-    margin-top: 6rem;
-    text-align: center;
+  width: 100%;
+  float: left;
+  margin-top: 6rem;
+  text-align: center;
 }
 .img2 {
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: -111;
-    opacity: 0.5;
-    display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -111;
+  opacity: 0.5;
+  display: none;
 }
 .img3 {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: -111;
-    opacity: 0.5;
-    display: none;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -111;
+  opacity: 0.5;
+  display: none;
 }
 .bannerLeft h3 {
-    color: #f75023;
-    font-weight: 500;
-    padding: 0;
+  color: #f75023;
+  font-weight: 500;
+  padding: 0;
 }
 .bannerLeft h1 {
-    font-family:Gabriola;
-    font-weight: bold;
-    color: #000000;
-    font-size:5rem;
-    padding: 0;
+  font-family: Gabriola;
+  font-weight: bold;
+  color: #000000;
+  font-size: 5rem;
+  padding: 0;
 }
 .bannerLeft h4 .cd {
-    color: #30c367;
+  color: #30c367;
 }
 .bannerLeft h4 .bd {
-    color: #8e78f0;
+  color: #8e78f0;
 }
 .bannerLeft p {
-    padding: 0 7rem;
+  padding: 0 7rem;
 }
 .headerSocial {
-    width: 100%;
-    display: grid;
-    justify-content: center;
+  width: 100%;
+  display: grid;
+  margin-top: 2rem;
+  justify-content: center;
+}
+.sIcon {
+  margin-top: 2rem;
 }
 .bannerRight {
-    margin-top: 5rem;
-    background: url(../assets/image/mm1.png);
-    background-position: 5rem 2rem;
-    background-repeat: no-repeat;
-    background-size: 340px;
-    width: 50%;
-    float: left;
-    padding: 2rem 1rem;
-    position: relative;
-    display: none;
+  margin-top: 5rem;
+  background: url(../assets/image/mm1.png);
+  background-position: 5rem 2rem;
+  background-repeat: no-repeat;
+  background-size: 340px;
+  width: 50%;
+  float: left;
+  padding: 2rem 1rem;
+  position: relative;
+  display: none;
 }
 .logoPic {
-    height: 400px;
-    width: 400px;
-    position: relative;
-    animation-name: logoPicture;
-    animation-duration: 7s;
-    animation-iteration-count: infinite;
-    animation-duration: alternate-reverse;
-    animation-timing-function: linear;
-    display: none;
+  height: 400px;
+  width: 400px;
+  position: relative;
+  animation-name: logoPicture;
+  animation-duration: 7s;
+  animation-iteration-count: infinite;
+  animation-duration: alternate-reverse;
+  animation-timing-function: linear;
+  display: none;
 }
 @keyframes logoPicture {
-    0%    {left: 50px; top: 50px;}
-    50%   {left: 50px; top: 80px;}
-    100%   {left: 50px; top: 50px;}
-    
+  0% {
+    left: 50px;
+    top: 50px;
+  }
+  50% {
+    left: 50px;
+    top: 80px;
+  }
+  100% {
+    left: 50px;
+    top: 50px;
+  }
 }
 
-
 @media (min-width: 1024px) {
-    .container {
-        width: 100%;
-        padding: 0;
-    }
-    .bannerLeft {
-        width: 50%;
-        padding: 7rem 4rem 0 4rem;
-        float: left;
-        margin-top: 2rem;
-    }
-    .bannerLeft p {
-        padding: 0;
-    }
-    .img2 {
-        display: block;
-    }
-    .img3 {
-        display: block;
-    }
-    .bannerRight {
-        display: block;
-    }
-    .logoPic {
-        display: block;
-    }
+  .container {
+    padding-left: 3rem;
+  }
+  .bannerLeft {
+    width: 50%;
+    padding: 7rem 4rem 0 4rem;
+    float: left;
+    text-align: left;
+    margin-top: 2rem;
+  }
+  .bannerLeft p {
+    padding: 0;
+    text-align: left;
+  }
+  .img2 {
+    display: block;
+  }
+  .img3 {
+    display: block;
+  }
+  .bannerRight {
+    display: block;
+  }
+  .logoPic {
+    display: block;
+  }
+  .headerSocial {
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    margin-top: 0;
+    justify-content: flex-start;
+  }
+  .sIcon {
+    margin-top: 0;
+  }
 }
 
 @media (min-width: 1280px) {
-    .bannerLeft p {
-        padding: 0 4rem;
-    }
+  .container {
+    padding-left: 6rem;
+  }
+  .bannerLeft p {
+    width: 25rem;
+  }
 }
