--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -1,11 +1,17 @@
 .portfolioMenu {
-    width: 100%;
-    text-align: center;
+  width: 100%;
+  text-align: center;
+  padding: 0 15rem;
+}
+.portfolioMenu ul {
+  padding: 0 6rem;
+  display: flex;
+  justify-content: space-around;
 }
 .portfolioMenu li {
-    display: inline-block;
-    padding: 0 50px;
-    text-align: center;
-    font-style: normal;
-    font-weight: 500;
+  display: inline-block;
+  padding: 0 1rem;
+  text-align: center;
+  font-style: normal;
+  font-weight: 500;
 }
