--- a/src/styles/Portfolio.module.css
+++ b/src/styles/Portfolio.module.css
@@ -1,23 +1,23 @@
-.portfilioContainer {
+.portfolio {
+  width: 35rem;
+  padding-bottom: 2rem;
+}
+.body {
   width: 100%;
-  margin-top: 6rem;
-  position: relative;
-  z-index: 1;
+  height: 250px;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 1px 5px 10px rgb(206, 205, 205);
 }
-.img4 {
-  height: 150px;
-  width: 150px;
-  position: absolute;
-  left: 0;
+.body img {
+  width: 600px;
+  height: 250px;
+  object-fit: fill;
+  transition: 1s linear;
+  cursor: pointer;
+  opacity: 0.9;
 }
-.img5 {
-  height: 300px;
-  width: 300px;
-  position: absolute;
-  right: -4rem;
-  bottom: -130px;
-  z-index: -1;
-}
-.menu {
-  margin: 3rem 0;
+.body img:hover {
+  margin-left: -40px;
+  opacity: 1;
 }
