--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -1,10 +1,13 @@
 .portfolioMenu {
   width: 100%;
   text-align: center;
-  padding: 0 15rem;
+  padding: 0;
+  display: flex;
+  justify-content: center;
 }
 .portfolioMenu ul {
-  padding: 0 6rem;
+  width: 15rem;
+  padding: 0;
   display: flex;
   justify-content: space-around;
 }
