--- a/src/styles/Qualitys.module.css
+++ b/src/styles/Qualitys.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: auto;
   display: grid;
-  padding: 5rem 6rem 2rem;
+  padding: 5rem 1rem 2rem;
   margin-left: -0.5rem;
 }
 .qualitys {
@@ -21,6 +21,9 @@
 }
 
 @media (min-width: 1024px) {
+  .container {
+    padding: 5rem 6rem 2rem;
+  }
   .qualitys {
     display: flex;
     justify-content: space-between;
