--- a/src/styles/Clients.module.css
+++ b/src/styles/Clients.module.css
@@ -1,10 +1,11 @@
 .comment {
-    width: 700px;
-    display: inline-block;
+    width: 600px;
+    display: grid;
+    justify-content: center;
     height: 300px;
     position: relative;
-    padding: 20px;
-    margin: 0 20px ;
+    margin: 0 20px;
+    border: 1px solid rgb(0, 225, 255);
 }
 .icon {
     text-align: center;
@@ -16,11 +17,20 @@
     text-align: center;
     font-style: italic;
     font-weight: 500;
+    padding: 0 30px;
 }
 .auther {
     height: 75px;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
+    display: grid;
+    justify-content: center;
+}
+
+@media (min-width: 1024px) {
+    .comment {
+        width: 700px;
+        margin: 0 10px;
+    }
+    .comment p {
+        padding: 0 30px;
+    }
 }
