--- a/src/styles/Clients.module.css
+++ b/src/styles/Clients.module.css
@@ -13,10 +13,11 @@
     color: #f75023;
 }
 .comment p {
+    width: 430px;
     text-align: center;
     font-style: italic;
     font-weight: 500;
-    padding: 0 30px;
+    padding: 0;
 }
 .auther {
     height: 75px;
