--- a/src/styles/Clients.module.css
+++ b/src/styles/Clients.module.css
@@ -1,5 +1,8 @@
+.container {
+    
+}
 .comment {
-    width: 575px;
+    width: 430px;
     display: grid;
     justify-content: center;
     height: 300px;
@@ -17,7 +20,7 @@
     text-align: center;
     font-style: italic;
     font-weight: 500;
-    padding: 0;
+    padding: 0 20px;
 }
 .auther {
     height: 75px;
