--- a/src/styles/DiL.module.css
+++ b/src/styles/DiL.module.css
@@ -1,22 +1,56 @@
-.dilContainer {
-    width: 100%;
-    padding: 10rem 3rem;
+.container {
+  width: 100%;
+  height: auto;
+  padding: 10rem 0;
+  display: grid;
+  justify-content: center;
+  margin-left: -0.5rem;
 }
-.dilLeft {
+.left {
+  width: 100%;
+  height: auto;
+}
+.header {
+    margin-bottom: 60px;
+}
+.pBars {
+    justify-content: center;
+}
+.right {
+  width: 100%;
+  height: auto;
+  display: grid;
+  justify-content: center;
+}
+.right .img {
+  height: 35rem;
+  margin-top: 4rem;
+}
+
+@media (min-width: 1024px) {
+  .container {
+    width: 100%;
+    padding: 10rem 5rem;
+  }
+  .left {
     width: 55%;
     float: left;
+  }
+  .header {
+    text-align: left !important;
 }
-.dilLeft h3 {
+  .left h3 {
     color: #f75023;
-}
-.dilRight {
+  }
+  .right {
     width: 45%;
     float: left;
     position: relative;
-}
-.dilRight .dilImg {
-    
+  }
+  .right .img {
     height: 35rem;
     position: absolute;
     right: 0;
+    margin-top: 0;
+  }
 }
