--- a/src/styles/DiL.module.css
+++ b/src/styles/DiL.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
   height: auto;
-  padding: 10rem 0;
+  padding: 10rem 2rem;
   display: grid;
   justify-content: center;
   margin-left: -0.5rem;
