--- a/src/styles/Services.module.css
+++ b/src/styles/Services.module.css
@@ -5,18 +5,26 @@
   margin-top: 130px;
   position: relative;
   z-index: 1;
+  margin-left: -0.5rem;
+  border: 1px solid red;
+  padding: 0 0;
+}
+.header p {
+  padding: 0 1rem;
 }
 .icon10 {
   position: absolute;
   top: -180px;
   right: -67px;
   z-index: -1;
+  display: none;
 }
 .icon9 {
   position: absolute;
   top: 100px;
   left: -70px;
   z-index: -1;
+  display: none;
 }
 .img {
   float: left;
@@ -32,4 +40,25 @@
 }
 .text span {
   color: #f75023;
+}
+
+
+@media (min-width: 1024px) {
+  .servicesContainer {
+    padding: 0 5rem;
+  }
+  .header p {
+    padding: 0 4rem;
+  }
+  .icon10 {
+    display: block;
+  }
+  .icon9 {
+    display: block;
+  }
+}
+@media (min-width: 1280px) {
+  .header p {
+    padding: 0 20rem;
+  }
 }
