--- a/src/styles/Service.module.css
+++ b/src/styles/Service.module.css
@@ -1,5 +1,5 @@
 .serviceBox {
-    width: 50%;
+    width: 100%;
     padding: 1rem;
 }
 .service {
@@ -11,3 +11,15 @@
     border-radius: 10px;
     padding: 50px;
 }
+
+
+@media (min-width: 1024px) {
+    .serviceBox {
+        width: 50%;
+        padding: 1rem;
+    }
+  }
+
+@media (min-width: 1280px) {
+
+  }
