--- a/src/styles/Newsletter.module.css
+++ b/src/styles/Newsletter.module.css
@@ -9,7 +9,7 @@
 .text {
     float: left;
     flex: 60%;
-    padding: 80px;
+    padding: 80px 80px 0 80px;
   }
   .text h2 {
       color: #ffffff;
@@ -27,10 +27,16 @@
     float: right;
     flex: 40%;
     background-color: transparent;
-    padding: 50px 80px 0 80px;
+    padding: 20px 80px 0 80px;
 }
  @media (min-width: 1024px) {
     .box {
         margin: 10rem 5rem 10rem 4.5rem;
+    }
+    .text {
+        padding: 80px;
+      }
+      .form {
+        padding: 50px 80px 0 80px;
     }
  }
