--- a/src/styles/Newsletter.module.css
+++ b/src/styles/Newsletter.module.css
@@ -1,5 +1,5 @@
 .box {
-    margin: 10rem 1rem 10rem 0;
+    margin: 10rem 3rem 10rem 2rem;
     display: flex;
     flex-wrap: wrap;
     background-color: #8456f0;
@@ -9,7 +9,7 @@
 .text {
     float: left;
     flex: 60%;
-    padding: 80px 80px 0 80px;
+    padding: 50px 50px 0 50px;
   }
   .text h2 {
       color: #ffffff;
@@ -27,7 +27,7 @@
     float: right;
     flex: 40%;
     background-color: transparent;
-    padding: 20px 80px 0 80px;
+    padding: 20px 50px 0 50px;
 }
  @media (min-width: 1024px) {
     .box {
