--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -1,15 +1,40 @@
 .contactContainer {
-    width: 100%;
-    margin-top: 130px;
-    position: relative;
+  width: 100%;
+  margin-top: 130px;
+  margin-left: -0.5rem;
+  position: relative;
+  padding: 0 1rem;
+  border: 1px solid rgb(255, 0, 0);
 }
 .img1 {
-    position: absolute;
-    left: -70px;
-    top: -60px;
+  position: absolute;
+  left: -70px;
+  top: -60px;
+  display: none;
 }
 .img2 {
-    position: absolute;
-    right: -65px;
-    bottom: 0;
+  position: absolute;
+  right: -65px;
+  bottom: 0;
+  display: none;
+}
+
+@media (min-width: 1024px) {
+  .contactContainer {
+    padding: 0 5rem;
+  }
+  .header p {
+    padding: 0 12rem;
+  }
+  .img1 {
+    display: block;
+  }
+  .img2 {
+    display: block;
+  }
+}
+@media (min-width: 1280px) {
+  .header p {
+    padding: 0 20rem;
+  }
 }
