--- a/src/styles/ContactBody.module.css
+++ b/src/styles/ContactBody.module.css
@@ -1,20 +1,20 @@
 .contactBody {
   width: 100%;
+  height: auto;
   display: flex;
   flex-wrap: wrap;
+  border: 1px solid rgb(17, 0, 255);
 }
-
 .left {
   width: 49.99%;
   float: left;
-  padding: 50px;
+  padding: 20px;
 }
 .right {
   width: 49.99%;
   float: right;
-  padding: 50px;
+  padding: 20px;
 }
-
 .leftSpan {
   width: 100%;
   position: relative;
@@ -33,7 +33,6 @@
   transform: translate(-50%, -50%);
   font-size: 18px;
 }
-
 .addressLogo {
   background-color: rgba(255, 0, 0, 0.13);
 }
@@ -57,4 +56,13 @@
 .contactEmail:hover {
   color: #f75023;
   cursor: pointer;
+}
+
+@media (min-width: 1024px) {
+  .left {
+    padding: 50px;
+  }
+  .right {
+    padding: 50px;
+  }
 }
