--- a/src/styles/ContactBody.module.css
+++ b/src/styles/ContactBody.module.css
@@ -3,16 +3,16 @@
   height: auto;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   border: 1px solid rgb(17, 0, 255);
 }
 .left {
-  width: 49.99%;
-  float: left;
+  width: 100%;
   padding: 20px;
+  border: 1px solid rgb(255, 0, 0);
 }
 .right {
-  width: 49.99%;
-  float: right;
+  width: 100%;
   padding: 20px;
 }
 .leftSpan {
@@ -60,9 +60,11 @@
 
 @media (min-width: 1024px) {
   .left {
+    width: 49.99%;
     padding: 50px;
   }
   .right {
+    width: 49.99%;
     padding: 50px;
   }
 }
