--- a/src/styles/Map.module.css
+++ b/src/styles/Map.module.css
@@ -1,8 +1,16 @@
 .mapContainer {
-    width: 100%;
-    padding: 100px 200px;
+  width: 100%;
+  padding: 100px 20px;
+  margin-left: -0.5rem;
+  border: 1px solid red;
 }
 .map {
-    height: 400px;
-    border-radius: 10px;
+  height: 400px;
+  border-radius: 10px;
+}
+
+@media (min-width: 1024px) {
+  .mapContainer {
+    padding: 100px 200px;
   }
+}
