--- a/src/styles/Cursor.module.css
+++ b/src/styles/Cursor.module.css
@@ -1,16 +1,11 @@
-/* #myDiv {
-  cursor: none;
-} */
-
 .cursor1,
-.cursor2,
-.cursor3 {
+.cursor2 {
   position: fixed;
   pointer-events: none;
   z-index: 9999;
   background-size: cover;
+  display: none;
 }
-
 .cursor1 {
   margin-left: -6px;
   margin-top: -70px;
@@ -18,6 +13,7 @@
   font-size: 55px;
   text-align: center;
   padding: 0;
+  display: none !important;
 }
 .cursor2 {
   width: 30px;
@@ -27,4 +23,13 @@
   border: 1px solid #f75023;
   border-radius: 50%;
   transition: 0.08s ease;
+  display: none !important;
+}
+@media (min-width: 1024px) {
+  .cursor1 {
+    display: block !important;
+  }
+  .cursor2 {
+    display: block !important;
+  }
 }
