--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,14 +9,16 @@
 body {
   background-color: #f7fbfd;
   width: 100%;
-  transition: transform 0.5s ease;
+  transition-property: all;
+  transition-duration: 0.5s;
   margin: -2rem 0 0 0;
   line-height: 1.80857;
   font-weight: normal;
   font-size: 14px;
   color: #070707;
   overflow-x: hidden;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 a {
   text-decoration: none !important;
@@ -50,7 +52,6 @@ h2 {
   font-size: 40px;
   font-style: normal;
   font-weight: 600;
-  
 }
 h3 {
   font-size: 25px;
@@ -94,9 +95,9 @@ h6 a {
   box-shadow: 1px 1px 5px rgba(8, 3, 3, 0.11);
 }
 .layout {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .column {
