--- a/src/styles/TopContainer.module.css
+++ b/src/styles/TopContainer.module.css
@@ -3,12 +3,13 @@
   height: auto;
   display: grid;
   justify-content: center;
+  border: 1px solid rgba(0, 0, 0, 0);
 }
 .bannerLeft {
   width: 100%;
   height: auto;
   float: left;
-  margin-top: 6rem;
+  margin-top: 7rem;
   text-align: center;
 }
 .img2 {
@@ -107,7 +108,7 @@
     padding: 3rem 4rem 0 4rem;
     float: left;
     text-align: left;
-    margin-top: 5rem;
+    margin-top: 7rem;
   }
   .bannerLeft h1 {
     font-size: 5rem;
@@ -123,7 +124,7 @@
     display: block;
   }
   .bannerRight {
-    margin-top: 5rem;
+    margin-top: 7rem;
     display: flex;
     width: 50%;
     justify-content: left;
