--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,6 +4,7 @@
 
 * {
   box-sizing: border-box !important;
+  transition: all 0.5s ease;
 }
 
 body {
@@ -89,11 +90,6 @@ h6 a {
   flex-wrap: wrap;
 }
 /*--End Basic section --*/
-.scrolled {
-  background-color: #ffffff5e;
-  backdrop-filter: blur(10px);
-  box-shadow: 1px 1px 5px rgba(8, 3, 3, 0.11);
-}
 .layout {
   display: flex;
   flex-wrap: wrap;
