--- a/src/styles/TestimonialsContainer.module.css
+++ b/src/styles/TestimonialsContainer.module.css
@@ -12,7 +12,7 @@
   width: 300px;
   transform: scaleX(-1) rotate(40deg);
   position: absolute;
-  left: -110px;
+  left: -40px;
   top: 50px;
   opacity: .3;
   display: none;
@@ -21,14 +21,9 @@
   width: 300px;
   /* transform: scaleX(-1) rotate(40deg); */
   position: absolute;
-  right: -65px;
+  right: -20px;
   bottom: -150px;
   opacity: .3;
-  display: none;
-}
-.side {
-  flex: 20%;
-  position: relative;
   display: none;
 }
 .testimonials {
@@ -40,6 +35,39 @@
   display: flex;
   justify-content: center;
 }
+.side {
+  flex: 20%;
+  position: relative;
+  display: none;
+  display: flex;
+  justify-content: center;
+}
+/* .side1 {
+  animation-name: side1;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-duration: alternate-reverse;
+  animation-timing-function: linear;
+  width: 10px;
+  height: 10px;
+  border: 2px solid red;
+  border-radius: 100%;
+}
+
+@keyframes side1 {
+  0% {
+    width: 10px;
+    height: 10px;
+  }
+  50% {
+    width: 15px;
+    height: 15px;
+  }
+  100% {
+    width: 10px;
+    height: 10px;
+  }
+} */
 
 
 @media (min-width: 1024px) {
