--- a/src/styles/TopNav.module.css
+++ b/src/styles/TopNav.module.css
@@ -3,13 +3,20 @@
     flex-wrap: wrap;
     position: -webkit-sticky;
     position: sticky;
-    top: 0;
+    top: 20px;
     z-index: 1000;
     margin: 0;
     background-color: transparent;
     width: 100%;
     text-align: center;
+    transition: all 1s;
 }
+.scrolled {
+    top: -20px !important;
+    background-color: #ffffff5e;
+    backdrop-filter: blur(10px);
+    box-shadow: 1px 1px 5px rgba(8, 3, 3, 0.11);
+  }
 .topMenu {
     width: 90%;
     text-align: center;
