--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,43 +1,33 @@
-.footerContainer {
+/* .footerContainer {
   display: grid;
   width: 100%;
   background-color: #e7eafd;
+} */
+.footerContainer {
+  width: 100%;
+  background-color: #e7eafd;
+  padding: 2rem 0;
 }
-.footerLeft {
+/* .footerLeft {
   display: grid;
   place-content: center;
   width: 100%;
+} */
+.text {
+  width: 100%;
 }
-.footerLeft a {
+.text p {
+  text-align: center;
+}
+.text a {
   color: #f75023;
 }
-.footerLeft p span:hover {
+.text p span:hover {
   color: #111111;
   cursor: pointer;
 }
-.footerRight {
-  display: grid;
-  justify-content: center;
-  width: 100%;
-}
-.footerRight ul {
-  width: 20rem;
-  display: flex;
-  justify-content: space-around;
-  padding: 0;
-  margin: -1.5rem 0 0 0;
-}
-.footerRight li {
-  display: inline-block;
-  font-size: 1.063rem;
-}
 
-.footerRight p:hover {
-  color: #f75023;
-  cursor: pointer;
-}
-
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   .footerLeft {
     width: 50%;
     padding: 2rem 0;
@@ -58,4 +48,4 @@
   .footerRight p {
     font-size: 1rem;
   }
-}
+} */
