--- a/src/styles/TopNav.module.css
+++ b/src/styles/TopNav.module.css
@@ -36,7 +36,7 @@
 }
 .topMenu li {
   display: inline-block;
-  padding: 0 10px;
+  padding: 0 0.5rem;
 }
 .topMenu li:first-child {
   position: absolute;
