--- a/src/styles/WhatsApp.module.css
+++ b/src/styles/WhatsApp.module.css
@@ -1,7 +1,7 @@
 .button {
   position: fixed;
-  bottom: 2rem;
-  left: 2rem;
+  bottom: 10px;
+  left: 10px;
   background-color: #25d366;
   border-radius: 50%;
   height: 50px;
@@ -16,5 +16,5 @@
 }
 .button:hover {
   border: 2px solid rgb(97, 56, 56);
-  bottom: 2.5rem;
+  bottom: 15px;
 }
