--- a/src/styles/Portfolio.module.css
+++ b/src/styles/Portfolio.module.css
@@ -2,6 +2,86 @@
   width: 380px;
   padding-bottom: 15px;
 }
+
+.body {
+  width: 100%;
+  height: 250px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 1px 5px 10px rgb(206, 205, 205);
+  display: flex;
+  justify-content: center;
+}
+
+.body img {
+  width: 600px;
+  height: 250px;
+  object-fit: fill;
+  transition: 1s linear;
+  cursor: pointer;
+  opacity: 1;
+}
+
+.body img:hover {
+  opacity: 1;
+}
+
+/* Overlay styling */
+.overlayTop,
+.overlayBottom {
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  background-color: rgba(0, 0, 0, 0.356); /* 0.5 transparency */
+  transition: transform 0.8s ease;
+}
+.text {
+  font-family: cursive;
+  font-weight: bolder;
+  color: white;
+  font-size: 2rem;
+  position: absolute;
+  top: 40%;
+  width: 100%;
+  text-align: center;
+  z-index: 3;
+  text-shadow: 2px 6px 6px rgb(0, 0, 0);
+}
+
+/* Top overlay starts in the middle and moves up */
+.overlayTop {
+  top: 0;
+  transform: translateY(100%);
+}
+
+/* Bottom overlay starts in the middle and moves down */
+.overlayBottom {
+  bottom: 0;
+  transform: translateY(-100%);
+}
+
+/* On hover, the top overlay moves up and the bottom overlay moves down */
+.body:hover .overlayTop {
+  transform: translateY(-100%);
+  opacity: 0.3;
+}
+
+.body:hover .overlayBottom {
+  transform: translateY(100%);
+  opacity: 0.3;
+}
+
+.body:hover .text {
+  opacity: 0;
+  transition: transform 2s ease;
+}
+
+
+/* .portfolio {
+  width: 380px;
+  padding-bottom: 15px;
+}
 .body {
   width: 100%;
   height: 250px;
@@ -22,4 +102,4 @@
 .body img:hover {
   margin-left: -40px;
   opacity: 1;
-}
+} */
